# vpar

./: .env.example  Anchor.toml  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
orderbook_engine/: Cargo.toml
orderbook_engine/src/: main.rs
programs/betting/src/: lib.rs  utils.rs
programs/sports-betting/: Cargo.toml
programs/sports-betting/src/: lib.rs
src/: App.tsx
src/components/: ClaimRewards.tsx  Navbar.tsx  WalletProvider.tsx
src/idl/: betting.ts
src/pages/: AdminPanel.tsx  Dashboard.tsx  EventDetails.tsx  EventList.tsx
src/services/: betting.ts  matchData.ts  websocket.ts
src/store/: useStore.ts
src/types/: index.ts
tests/: sports-betting.ts
