[package]
name = "orderbook_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.23.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
solana-program = "1.16.0"
spl-token = "4.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 